test previas circulares